--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,11 @@
     "axios": "^0.27.2",
     "immer": "^9.0.15",
     "leaflet": "^1.8.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
