--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.8.6",
     "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "immer": "^9.0.15",
     "leaflet": "^1.8.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "use-immer": "^0.7.0",
@@ -44,8 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/react": "^12.1.5"
   }
 }
