--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "esri-leaflet": "^3.0.8",
+    "esri-leaflet-geocoder": "^3.1.3",
     "immer": "^9.0.15",
     "leaflet": "^1.8.0",
     "react": "^18.1.0",
